// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Parrhesia.Infrastructure.Persistence;

#nullable disable

namespace Parrhesia.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(ParrhesiaDbContext))]
    partial class ParrhesiaDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.0")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Parrhesia.Domain.SurveyManagement.Aggregates.Survey", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(2000)
                        .HasColumnType("nvarchar(2000)");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("datetime2");

                    b.HasKey("Id");

                    b.HasIndex("Status");

                    b.ToTable("Surveys", (string)null);
                });

            modelBuilder.Entity("Parrhesia.Domain.SurveyManagement.Entities.Option", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("Order")
                        .HasColumnType("int");

                    b.Property<Guid>("QuestionId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("SurveyId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Text")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.HasKey("Id");

                    b.HasIndex("QuestionId");

                    b.HasIndex("SurveyId");

                    b.ToTable("Options", (string)null);
                });

            modelBuilder.Entity("Parrhesia.Domain.SurveyManagement.Entities.Question", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("Order")
                        .HasColumnType("int");

                    b.Property<Guid>("SurveyId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Text")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("nvarchar(500)");

                    b.HasKey("Id");

                    b.HasIndex("SurveyId");

                    b.ToTable("Questions", (string)null);
                });

            modelBuilder.Entity("Parrhesia.Domain.Voting.Aggregates.Ballot", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("CastedAt")
                        .HasColumnType("datetime2");

                    b.Property<Guid>("QuestionId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("SelectedOptionId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("SurveyId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("VoterFingerprint")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.HasKey("Id");

                    b.HasIndex("CastedAt");

                    b.HasIndex("SelectedOptionId");

                    b.HasIndex("SurveyId");

                    b.HasIndex("VoterFingerprint", "SurveyId")
                        .IsUnique();

                    b.ToTable("Ballots", (string)null);
                });

            modelBuilder.Entity("Parrhesia.Domain.SurveyManagement.Aggregates.Survey", b =>
                {
                    b.OwnsOne("Parrhesia.Domain.SurveyManagement.ValueObjects.CollectionPeriod", "CollectionPeriod", b1 =>
                        {
                            b1.Property<Guid>("SurveyId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<DateTime>("EndDate")
                                .HasColumnType("datetime2")
                                .HasColumnName("EndDate");

                            b1.Property<DateTime>("StartDate")
                                .HasColumnType("datetime2")
                                .HasColumnName("StartDate");

                            b1.HasKey("SurveyId");

                            b1.ToTable("Surveys");

                            b1.WithOwner()
                                .HasForeignKey("SurveyId");
                        });

                    b.Navigation("CollectionPeriod")
                        .IsRequired();
                });

            modelBuilder.Entity("Parrhesia.Domain.Voting.Aggregates.Ballot", b =>
                {
                    b.OwnsOne("Parrhesia.Domain.Voting.ValueObjects.DeviceInfo", "DeviceInfo", b1 =>
                        {
                            b1.Property<Guid>("BallotId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<string>("DeviceId")
                                .IsRequired()
                                .HasMaxLength(255)
                                .HasColumnType("nvarchar(255)")
                                .HasColumnName("DeviceId");

                            b1.Property<string>("IpHash")
                                .IsRequired()
                                .HasMaxLength(64)
                                .HasColumnType("nvarchar(64)")
                                .HasColumnName("IpHash");

                            b1.Property<string>("UserAgent")
                                .IsRequired()
                                .HasMaxLength(500)
                                .HasColumnType("nvarchar(500)")
                                .HasColumnName("UserAgent");

                            b1.HasKey("BallotId");

                            b1.ToTable("Ballots");

                            b1.WithOwner()
                                .HasForeignKey("BallotId");
                        });

                    b.Navigation("DeviceInfo");
                });
#pragma warning restore 612, 618
        }
    }
}
